<resources>
    <string name="app_name">Administración Polideportivo</string>
    <string name="insert_solicitud">Insertar Solicitud</string>
    <string name="cant_asistentes">Cantidad Asistentes</string>
    <string name="fecha_reserva">Fecha Reserva</string>
    <string name="select_actividad">Seleccionar Actividad</string>
    <string name="enviar_solicitud">Enviar Solicitud</string>
    <string name="consultar_area">Consultar</string>
    <string name="consult_area">Consultar Area</string>
    <string name="txtelim_area">Identificador</string>
    <string name="eliminar_area">Eliminar Area</string>
    <string name="btn_act_area">Actualizar</string>
    <string name="actualizar_area">Actualizar Area</string>
    <string name="insert_area">Insertar Area</string>
    <string name="nombre_area">Nombre</string>
    <string name="capacidad_area">Capacidad</string>
    <string name="enviar_area">Insertar</string>
    <string name="limpiar_area">Limpiar</string>
    <string name="id_area">Identificador</string>
    <string name="area">Area(m2)</string>
    <string name="insert_horario">Insertar Horario</string>
    <string name="hora">Hora</string>
    <string name="dia">Día</string>
    <string name="Instruct">Instructor</string>
    <string name="ingresar_horario">Ingresar Horario</string>
    <string name="update_horario">Actualizar Horario</string>
    <string name="actualizar_horario">Actualizar Horario</string>
    <string name="consult_horario">Consultar Horario</string>
    <string name="elim_horario">Eliminar Horario</string>
    <string name="insert_deporte_area">Insertar Deporte-Area</string>
    <string name="consult_deporte">Consultar Deporte</string>
    <string name="eliminar_deporte">Eliminar Deporte</string>
    <string name="iddeporte">Identificador</string>
    <string name="txtinsert_deporte">Insertar</string>
    <string name="id_deporte">Id Deporte</string>
    <string name="nombre_deporte">Nombre Deporte</string>


    <string name="eliminar_deporte_area">Eliminar Deporte-Area</string>

    <string name="consult_deporte_area">Consultar deporte-Area</string>

    <string name="actualizar_deporte_area">Actualizar Deporte-Area</string>
    <string name="id_area1">ID Area</string>
    <string name="id_deporte1">ID Deporte</string>
    <string name="actualizar_deporte">Actualizar Deporte</string>
    <string name="monto">Costo</string>
    <string name="actualizar_solicitud">Actualizar Solicitud</string>
    <string name="eliminar_solicitud">Eliminar Solicitud</string>
    <string name="consultar_solicitud">Consultar Solicitud</string>
    <string name="eliminar">Eliminar</string>
    <string name="consultar">Consultar</string>
    <string name="limpiar">Limpiar</string>
    <string name="select_sol">Seleccionar Solicitud</string>
    <string name="hora_reserva"> Horas a Reservadar </string>
    <string name="insertar_solicitante">Datos De Solicitante</string>
    <string name="dui_solicitante">DUI</string>
    <string name="nombre_solicitante">Nombre</string>
    <string name="apellido_solicitante">Apellido</string>
    <string name="telefono_solicitante">Telefono</string>
    <string name="mail_solicitante">Mail</string>
    <string name="enviar_solicitante">Enviar</string>
    <string name="texto_solicitante">Seleccionar</string>
    <string name="eliminarB_solicitante">Eliminar</string>
    <string name="eliminar_solicitante">Eliminar Solicitante</string>
    <string name="consultar_solicitante">Consultar Solicitante</string>
    <string name="actualizar_solicitante">Actualizar Solicitante</string>

    <string name="insertar_tarifa">Insertar Tarifas</string>
    <string name="consultar_tarifa">Consultar Tarifas</string>
    <string name="actualizar_tarifa">Modificar Tarifas</string>
    <string name="eliminar_tarifa">Eliminar Tarifas</string>

    <string name="actividad">Actividad</string>
    <string name="estado">Estado</string>
    <string name="fecha_sol">Fecha de Solicitud</string>
    <string name="id_horario">Identificador</string>
    <string name="limpiar_horario">Limpiar</string>
    <string name="consultHorario">Consultar</string>
    <string name="txtelim_horario">Identificador</string>
    <string name="elimHorario">Eliminar</string>
    <string name="insert_reserva">Insertar Reserva</string>
    <string name="fecha_reser">Fecha de Reserva</string>
    <string name="tiempo_reserva">Tiempo de Reserva</string>
    <string name="update_reserva">Actualizar Reserva</string>
    <string name="id_reserva">Identificador</string>
    <string name="actualizar_reserva">Actualizar</string>
    <string name="consult_reserva">Consultar Reserva</string>
    <string name="consultReserva">Consultar</string>
    <string name="insertReserv">Insertar</string>
    <string name="elim_reserva">Eliminar Reserva</string>
    <string name="identificador">Identificador</string>
    <string name="ident_reserva">Identificador de Reserva</string>
    <string name="ident_horario">Identificador de Horario</string>
    <string name="insert_detalleReserva">Insertar Detalle de Reserva</string>
    <string name="ident_area">Identificador de Area</string>
    <string name="insertar_detalleReserva">Insertar</string>
    <string name="actu_detalleReserva">Actualizar Detalle de Reserva</string>
    <string name="actuDetalleReserva">Actualizar</string>
    <string name="consult_detalleReserva">Consultar Detalle de Reserva</string>
    <string name="ConsultDetalleReserva">Consultar</string>
    <string name="elim_detalleReserva">Eliminar Detalle de Reserva</string>
    <string name="ElimDetalleReserva">Eliminar</string>
    <string name="ConDetalleSolcitud">Consultar Detalle de Solicitud</string>
    <string name="EliDetalleSolcitud">Eliminar Detalle de Solicitud</string>
    <string name="iddescripcion">Descripcion</string>
    <string name="idactivo">Activo</string>
    <string name="consult">Consultar Deporte Area</string>
    <string name="ActualizarDS">Actualizar Detalle de Solicitud</string>
    <string name="actualizar">Actualizar</string>

    <string name="nombre_de_la_actividad">Nombre de la actividad:</string>
    <string name="insetarDetalleSolicitud">Insertar Detalle de Solicitud </string>
    <string name="solicitud">Solicitud </string>

    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="id_actividad">Codigo de Actividad</string>
    <string name="nombre_actividad">Nombre de la Actividad</string>
    <string name="actualizar_actividad">Actualizar Actividad</string>
    <string name="consultar_actividad">Consultar Actividad</string>
    <string name="eliminar_actividad">Eliminar Actividad</string>
    <string name="insertar_actividad">Insertar Actividad</string>
    <string name="insertar_administrador">Insertar Administrador</string>
    <string name="consultar_administrador">Consultar Administrador</string>
    <string name="eliminar_administrador">Eliminar Administrador</string>
    <string name="actualizar_administrador">Actualizar Administrador</string>
    <string name="id_administrador">Código de Administrador</string>
    <string name="telefono_administrador">Telefono de Administrador</string>
    <string name="email_administrador">Email de Administrador</string>
    <string name="horario">Horario</string>
    <string name="numeros_horas">Cantidad De Horas</string>
    <string name="numeros_personas">Cantidad De Personas</string>
    <string name="actualizar_services">Actualizar con Servicios</string>
    <string name="resultado">Resultador</string>
    <string name="consultar_solicitud2">Solicitudes por Actividad</string>
    <string name="consultar_solicitud3">Total de Solicitudes</string>
    <string name="montoSol">total</string>
    <string name="update_horario_fecha">Actualizar Tarifa Por Fecha</string>
    <string name="fecha">Fecha</string>
    <string name="actu_tarifa_fecha">Guardar</string>
    <string name="insertar_tarifa_ext">Insertar Tarifa a Base Externa</string>
    <string name="insertarSolicitante">Ingresar Solicitante a Base Exterior</string>
    <string name="insertar">Insertar</string>
    <string name="solciitudfecha">Consultar Solicitud por Fecha</string>
    <string name="insert_solicitudsw">Insertar Solicitud</string>
    <string name="actualizar_solicitante_ws">Actualizar Solicitante Por Fecha</string>
    <string name="id_solicitud">Identificador Solicitud</string>
</resources>
