<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding = "20dip"
        android:orientation="vertical">

        <TextView android:id = "@+id/title_consultar_solicitud"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "10dip"
            android:layout_marginBottom = "20dip"
            android:gravity = "center"
            android:textSize = "25dip"
            android:textColor = "@color/colorAccent"
            android:text="@string/consultar_solicitud"/>

        <EditText android:id = "@+id/txtIdSolicitud"
            android:hint = "@string/select_sol"
            android:inputType = "number"
            style="@style/editText"/>

        <Button
            android:id="@+id/botonconsultar"
            style="@style/button"
            android:text="@string/consultar"
            android:onClick="consultarSolicitud"/>

        <Button
            android:id="@+id/botonLimpiar"
            style="@style/button"
            android:text="@string/limpiar"
            android:onClick="limpiarTexto"/>

        <EditText
            android:id="@+id/editDui"
            android:inputType="number"
            style="@style/noEditText"
            android:hint = "@string/dui_solicitante"/>

        <EditText
            android:id="@+id/editCanAsistentes"
            android:inputType="number"
            style="@style/noEditText"
            android:hint = "@string/cant_asistentes"/>


        <EditText
            android:id="@+id/ediFechaReserva"
            android:inputType="text"
            style="@style/noEditText"
            android:hint = "@string/fecha_reserva"/>

        <EditText
            android:id="@+id/ediFechaSolicitud"
            android:inputType="text"
            style="@style/noEditText"
            android:hint = "@string/fecha_sol"/>

        <EditText
            android:id="@+id/ediActividad"
            android:inputType="text"
            style="@style/noEditText"
            android:hint = "@string/actividad"/>

        <EditText
            android:id="@+id/editHorasReservadas"
            android:inputType="number"
            style="@style/noEditText"
            android:hint = "@string/hora_reserva"/>

        <EditText
            android:id="@+id/ediMonto"
            android:inputType="text"
            style="@style/noEditText"
            android:hint = "@string/monto"/>

        <EditText
            android:id="@+id/ediEstado"
            android:inputType="text"
            style="@style/noEditText"
            android:hint = "@string/estado"/>

    </LinearLayout>
</ScrollView>