<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding = "20dip"
        android:orientation="vertical">

        <TextView android:id = "@+id/title_consultar_solicitud"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "10dip"
            android:layout_marginBottom = "10dip"
            android:gravity = "center"
            android:textSize = "25dip"
            android:textColor = "@color/colorAccent"
            android:text="@string/consultar_solicitante"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectSolicitante"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/button"
            android:text="@string/consultar"
            android:onClick="consultarSolicitante"
            android:id="@+id/button2" />

        <Button
            style="@style/button"
            android:text="@string/limpiar"
            android:onClick="limpiarTexto"
            android:id="@+id/button3"/>

        <EditText
            style="@style/noEditText"
            android:id="@+id/nombreSol"
            android:hint="@string/nombre_area" />

        <EditText
            style="@style/noEditText"
            android:id="@+id/apellidoSol"
            android:hint="@string/apellido_solicitante" />

        <EditText
            style="@style/noEditText"
            android:id="@+id/dui"
            android:hint="@string/dui_solicitante"/>

        <EditText
            style="@style/noEditText"
            android:id="@+id/telefono"
            android:hint="@string/telefono_solicitante"/>

        <EditText
            style="@style/noEditText"
            android:id="@+id/email"
            android:hint="@string/mail_solicitante" />

    </LinearLayout>
</ScrollView>