<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent"
    android:padding = "20dip"
    android:orientation = "vertical">

    <TextView android:id = "@+id/title_insert_horario"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "10dip"
        android:layout_marginBottom = "20dip"
        android:text = "@string/insert_horario"
        android:gravity = "center"
        android:textSize = "25dip"
        android:textColor = "@color/colorAccent"/>

    <EditText android:id = "@+id/IdHorario"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:hint = "@string/ident_horario"
        android:inputType = "text"
        android:layout_marginTop = "25dip"/>

    <EditText android:id = "@+id/txtHora"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:hint = "@string/hora"
        android:inputType = "text"
        android:layout_marginTop = "25dip"/>

    <EditText android:id = "@+id/txtDia"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:hint = "@string/dia"
        android:inputType = "text"
        android:layout_marginTop = "25dip"/>

    <EditText android:id = "@+id/txtInstruct"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:hint = "@string/Instruct"
        android:inputType = "text"
        android:layout_marginTop = "25dip"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:text="@string/ingresar_horario"
        android:layout_marginTop = "25dip"
        android:id="@+id/IngreHoraButton"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:text="@string/limpiar_horario"
        android:layout_marginTop = "25dip"
        android:id="@+id/LimpiarButton"/>


</LinearLayout>
