<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:padding = "20dip"
        android:orientation = "vertical">

        <TextView android:id = "@+id/title_update_horario"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "10dip"
            android:layout_marginBottom = "20dip"
            android:text = "@string/update_horario"
            android:gravity = "center"
            android:textSize = "25dip"
            android:textColor = "@color/colorAccent"/>

        <EditText android:id = "@+id/IdHorario"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/ident_horario"
            android:inputType = "text"
            android:layout_marginTop = "25dip"
            android:numeric="integer"/>


        <EditText android:id = "@+id/Hora"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/hora"
            android:inputType = "text"
            android:layout_marginTop = "25dip"
            android:numeric="decimal"/>

        <EditText android:id = "@+id/Dia"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/dia"
            android:inputType = "text"
            android:layout_marginTop = "25dip"/>

        <CheckBox android:id="@+id/Instruct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Instruct"
            android:layout_marginTop = "25dip"/>

        <Button
            style="@style/button"
            android:text="@string/actualizar_horario"
            android:onClick="actualizarHorario"
            android:id="@+id/UpdateHoraButton"/>

        <Button
            style="@style/button"
            android:text="@string/limpiar_horario"
            android:onClick="limpiarTexto"
            android:id="@+id/LimpiarButton"/>

    </LinearLayout>
</ScrollView>
