<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent"
    android:padding = "20dip"
    android:orientation = "vertical">

    <TextView android:id = "@+id/title_insert_reserva"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "10dip"
        android:layout_marginBottom = "20dip"
        android:text = "@string/insert_reserva"
        android:gravity = "center"
        android:textSize = "25dip"
        android:textColor = "@color/colorAccent"/>

    <EditText android:id = "@+id/IdReserva"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:hint = "@string/ident_reserva"
        android:inputType = "text"
        android:layout_marginTop = "25dip"/>

    <EditText android:id = "@+id/IdHorario"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:hint = "@string/ident_horario"
        android:inputType = "text"
        android:layout_marginTop = "25dip"/>

    <EditText android:id = "@+id/txtfechaReserv"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:hint = "@string/fecha_reser"
        android:inputType = "text"
        android:layout_marginTop = "25dip"/>

    <EditText android:id = "@+id/txtTiempoReserv"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:hint = "@string/tiempo_reserva"
        android:inputType = "text"
        android:layout_marginTop = "25dip"/>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:text="@string/insertReserv"
        android:layout_marginTop = "25dip"
        android:id="@+id/InsertReservButton"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_height = "wrap_content"
        android:layout_width = "fill_parent"
        android:text="@string/limpiar"
        android:layout_marginTop = "25dip"
        android:id="@+id/LimpiarButton"/>


</LinearLayout>
</ScrollView>