<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dip">

        <TextView
            android:id="@+id/title_actualizar_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="@string/actualizar_area"
            android:textColor="@color/colorAccent"
            android:textSize="25dip" />

        <Spinner
            android:id="@+id/selectArea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:prompt="@string/select_actividad" />

        <Button
            android:id="@+id/EnviarButton"
            style="@style/button"
            android:onClick="actualizarArea"
            android:text="@string/btn_act_area" />

        <Button
            android:id="@+id/LimpiarButton"
            style="@style/button"
            android:onClick="limpiarTexto"
            android:text="@string/limpiar_area" />


        <EditText
            android:id="@+id/nombreArea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:hint="@string/nombre_area"
            android:inputType="text" />

        <EditText
            android:id="@+id/capacidadArea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:hint="@string/capacidad_area"
            android:inputType="number|text"
            android:numeric="integer" />

        <EditText
            android:id="@+id/aream2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:hint="@string/area"
            android:inputType="text|numberDecimal"
            android:numeric="decimal" />

    </LinearLayout>
</ScrollView>