<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:padding = "20dip"
        android:orientation = "vertical">

        <TextView android:id = "@+id/title_consultar_reserva"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "10dip"
            android:layout_marginBottom = "20dip"
            android:text = "@string/consult_reserva"
            android:gravity = "center"
            android:textSize = "25dip"
            android:textColor = "@color/colorAccent"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_actividad"
            android:layout_marginTop = "25dip"
            android:id="@+id/selectReserva" />

        <Button
            style="@style/button"
            android:text="@string/consultReserva"
            android:onClick="consultarReserva"
            android:id="@+id/ConsultarButton"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:text="@string/limpiar"
            android:onClick="limpiarTexto"
            android:layout_marginTop = "25dip"
            android:id="@+id/LimpiarButton"/>

        <EditText android:id = "@+id/FechaReserva"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/fecha_reser"
            android:inputType = "text"
            android:layout_marginTop = "25dip"/>

        <EditText android:id = "@+id/TiempoReserva"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/tiempo_reserva"
            android:inputType = "text"
            android:layout_marginTop = "25dip"/>

        <EditText android:id = "@+id/IdHorario"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/horario"
            android:inputType = "text"
            android:layout_marginTop = "25dip"/>

    </LinearLayout>
</ScrollView>