<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent"
        android:padding = "20dip"
        android:orientation = "vertical">

        <TextView android:id = "@+id/title_consult_deporte_area"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "10dip"
            android:layout_marginBottom = "20dip"
            android:text = "@string/ConDetalleSolcitud"
            android:gravity = "center"
            android:textSize = "25dip"
            android:textColor = "@color/colorAccent"/>

        <EditText android:id = "@+id/editIdSolicitud"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/solicitud"
            android:inputType = "number"
            android:layout_marginTop = "25dip"/>

        <EditText android:id = "@+id/editIdArea"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/id_area1"
            android:inputType = "number"
            android:layout_marginTop = "25dip"/>


        <Button
            style="@style/button"
            android:text="@string/consultar_area"
            android:onClick="consultarDetalleSolicitud"
            android:id="@+id/consultarDS"/>

        <Button
            style="@style/button"
            android:text="@string/limpiar_area"
            android:onClick="limpiarTexto"
            android:id="@+id/LimpiarButton"/>

        <EditText android:id = "@+id/editDescripcion"
            android:layout_height = "wrap_content"
            android:layout_width = "fill_parent"
            android:hint = "@string/iddescripcion"
            android:inputType = "text"
            android:layout_marginTop = "25dip"/>

    </LinearLayout>
</ScrollView>